<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custommessage</name>
  <version>0.0.1</version>
  <description>Custom ROS2 message for Unity integration</description>
  <maintainer email="suzuka@todo.todo">suzuka</maintainer>
  <license>Apache-2.0</license>

  <!-- ビルドツール -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- メッセージ生成に必要な依存 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- 実行時に必要な依存 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- テスト用依存（任意） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
