<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cpp_package</name>
  <version>0.0.0</version>
  <description>MyCartographer package for SLAM</description>
  <maintainer email="suzuka@todo.todo">suzuka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  

  <!-- TF変換を扱うためのパッケージ -->
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <!-- センサーデータを扱うためのパッケージ -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Launchファイルの依存関係 -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Linting用 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 実行時に必要なパッケージ -->
  <exec_depend>rclpy</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
 
  <depend>custom_message_robot</depend>
  <depend>can_packet</depend>
  
  
  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
